tests/lifetime/nll/mixed_branch_return_arm_still_leaks.err.expected
error: at 4:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 4 |             branch(copy b) [true: return_arm, false: die_arm]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
   |
 2 |         fn f(r: &out i64, b: bool) {
   |              ^^^^^^^^^^^
