tests/lifetime/nll/mixed_branch_return_arm_still_leaks.sim

        fn f(r: &out i64, b: bool) {
          entry:
            branch(copy b) [true: return_arm, false: die_arm]
          return_arm:
            return
          die_arm:
            abort
        }
        